--- a/Assignment_3.ipynb
+++ b/Assignment_3.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOX76B1C7VpDkfUEkaOFxUN",
+      "authorship_tag": "ABX9TyPADb22ot+PpxYQ8BPPHQwE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -157,7 +157,7 @@
     {
       "cell_type": "code",
       "source": [
-        ">>> print(\"Lanuages:\\nPython\\n\\tC\\nJavaScript\")"
+        "print(\"Lanuages:\\nPython\\n\\tC\\nJavaScript\")"
       ],
       "metadata": {
         "colab": {
@@ -183,10 +183,10 @@
     {
       "cell_type": "code",
       "source": [
-        ">>> favorite_lanuage ='python'\n",
-        ">>> favorite_lanuage = favorite_lanuage.rstrip()\n",
-        ">>> favorite_lanuage.lstrip()\n",
-        ">>> favorite_lanuage.strip()\n"
+        "favorite_lanuage ='python'\n",
+        "favorite_lanuage = favorite_lanuage.rstrip()\n",
+        "favorite_lanuage.lstrip()\n",
+        "favorite_lanuage.strip()\n"
       ],
       "metadata": {
         "colab": {
@@ -240,7 +240,7 @@
     {
       "cell_type": "code",
       "source": [
-        ">>> 2 + 3"
+        "2 + 3"
       ],
       "metadata": {
         "colab": {
@@ -266,7 +266,7 @@
     {
       "cell_type": "code",
       "source": [
-        ">>> 3 - 2"
+        "3 - 2"
       ],
       "metadata": {
         "colab": {
@@ -292,7 +292,7 @@
     {
       "cell_type": "code",
       "source": [
-        ">>> 2 * 3"
+        "2 * 3"
       ],
       "metadata": {
         "colab": {
@@ -318,7 +318,7 @@
     {
       "cell_type": "code",
       "source": [
-        ">>> 3 / 2\n"
+        "3 / 2\n"
       ],
       "metadata": {
         "colab": {
@@ -344,7 +344,7 @@
     {
       "cell_type": "code",
       "source": [
-        ">>> 3 ** 2"
+        "3 ** 2"
       ],
       "metadata": {
         "colab": {
@@ -396,7 +396,7 @@
     {
       "cell_type": "code",
       "source": [
-        ">>> 10 ** 6"
+        "10 ** 6"
       ],
       "metadata": {
         "colab": {
@@ -422,7 +422,7 @@
     {
       "cell_type": "code",
       "source": [
-        ">>> 2 + 3 * 4"
+        "2 + 3 * 4"
       ],
       "metadata": {
         "colab": {
@@ -448,7 +448,7 @@
     {
       "cell_type": "code",
       "source": [
-        ">>> (2+3) * 4"
+        "(2+3) * 4"
       ],
       "metadata": {
         "colab": {
@@ -474,16 +474,16 @@
     {
       "cell_type": "code",
       "source": [
-        ">>> 0.1 + 0.1"
+        "0.1 + 0.1"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "-L32g2tfL9NJ",
-        "outputId": "7723c859-bf06-4bfb-adc2-6d837352a56a"
+        "outputId": "be592e68-d929-4a81-8f7c-cd5bff08680e"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -493,23 +493,23 @@
             ]
           },
           "metadata": {},
-          "execution_count": 29
+          "execution_count": 1
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        ">>> 0.2 + 0.2"
+        "0.2 + 0.2"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "BJtGVr6kMAwc",
-        "outputId": "6638c682-8055-46a8-deff-66d262caadea"
+        "outputId": "38dd44e0-aa89-4a3e-ebf0-b7041e46a48e"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -519,23 +519,23 @@
             ]
           },
           "metadata": {},
-          "execution_count": 30
+          "execution_count": 2
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        ">>> 2 * 0.1"
+        "2 * 0.1"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "sFeH_yaMMDTj",
-        "outputId": "1261af4b-0474-4dca-e1f9-b0cb165179b6"
+        "outputId": "b37c2597-e0da-4b87-c349-68637c099b90"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -545,23 +545,23 @@
             ]
           },
           "metadata": {},
-          "execution_count": 31
+          "execution_count": 3
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        ">>> 2 * 0.2"
+        "2 * 0.2"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "ag2braoDMG6x",
-        "outputId": "01188275-64a3-4792-a734-7f46d1440610"
+        "outputId": "97d65636-59b2-47f3-be24-1671b0e3634c"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -571,23 +571,23 @@
             ]
           },
           "metadata": {},
-          "execution_count": 33
+          "execution_count": 4
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        ">>> 0.2 + 0.1"
+        "0.2 + 0.1"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "MrszS9K5MKBg",
-        "outputId": "2ac6bc98-4ceb-4c7b-e878-6937ce937c3d"
+        "outputId": "7796ceb4-e85a-4fe4-a2e2-ba6bab68d14f"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -597,14 +597,14 @@
             ]
           },
           "metadata": {},
-          "execution_count": 34
+          "execution_count": 5
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        ">>> 3 * 0.1"
+        "3 * 0.1"
       ],
       "metadata": {
         "colab": {
@@ -630,7 +630,7 @@
     {
       "cell_type": "code",
       "source": [
-        ">>> 4/2"
+        "4/2"
       ],
       "metadata": {
         "colab": {
@@ -656,7 +656,7 @@
     {
       "cell_type": "code",
       "source": [
-        ">>> 1 + 2.0"
+        "1 + 2.0"
       ],
       "metadata": {
         "colab": {
@@ -682,7 +682,7 @@
     {
       "cell_type": "code",
       "source": [
-        ">>> 2 * 3.0"
+        "2 * 3.0"
       ],
       "metadata": {
         "colab": {
@@ -708,7 +708,7 @@
     {
       "cell_type": "code",
       "source": [
-        ">>> 3.0 ** 2"
+        "3.0 ** 2"
       ],
       "metadata": {
         "colab": {
@@ -734,7 +734,7 @@
     {
       "cell_type": "code",
       "source": [
-        ">>> universe_age = 14_000_000_000"
+        "universe_age = 14_000_000_000"
       ],
       "metadata": {
         "id": "VVIprrNgMbVd"
@@ -745,7 +745,7 @@
     {
       "cell_type": "code",
       "source": [
-        ">>>print(universe_age)"
+        "print(universe_age)"
       ],
       "metadata": {
         "colab": {
@@ -770,7 +770,7 @@
     {
       "cell_type": "code",
       "source": [
-        ">>> x, y, z = 0, 0, 0"
+        "x, y, z = 0, 0, 0"
       ],
       "metadata": {
         "id": "gH-4rBe7MmFX"
@@ -781,7 +781,7 @@
     {
       "cell_type": "code",
       "source": [
-        ">>> import this"
+        "import this"
       ],
       "metadata": {
         "colab": {
