--- a/Assignment6fix.ipynb
+++ b/Assignment6fix.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPCjRIkMO9I9/grNOHFaFRY",
+      "authorship_tag": "ABX9TyPLR/0ZZN9rjwgETx/n8nEF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "id": "rM785zdX7h1n",
         "colab": {
@@ -59,7 +59,9 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "#my problem was trying to find a cat breed my roommate would like"
+      ],
       "metadata": {
         "id": "Ke3yAR4r-oyL"
       },
