--- a/Assignment13.ipynb
+++ b/Assignment13.ipynb
@@ -27,7 +27,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "id": "7aynL_Db1kIy"
       },
@@ -204,9 +204,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "HSeKP4kK27n2",
-        "outputId": "a6337ca7-748e-42d7-b7b2-57a66e5f7fae"
+        "outputId": "1fc9802b-2c0b-4d19-9e1a-fbf279ed549a"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -214,40 +214,40 @@
           "text": [
             "Banono Difiwopi, banonod@gmail.com, +20 351 7195 640, swimming, saxophone\n",
             "Banono Difiwopi, banonod@gmail.com, ++20 351 7195 640, swimming, saxophone\n",
-            "Dese el Ronouteo, desee@msn.com, +27 143 8038 9093, singing, swimming\n",
-            "Dese el Ronouteo, desee@msn.com, +27 143 8038 9093, singing, swiming\n",
-            "Gula Sojabobo, gulas@gmail.com, +38 150 806 083, javelin, airplanes, painting\n",
-            "Gula Sojabobo, gulas@gmail_dot_com, +38 150 806 083, javelin, airplanes, painting\n",
-            "Hidehi Hisitaino, hhisi001@plattsburgh.edu, +17 839 0306 027, airplanes, sewing, painting, bicycling\n",
-            "Hidehi Hisitaino, hhisi001@plattsburgh.edu, ++17 839 0306 027, airplanes, sewing, painting, bicycling\n",
-            "Huli Vinietewa, hvini004@plattsburgh.edu, +5 625 961 914, reading, poetry\n",
-            "Huli Vinietewa, hvini004@plattsburgh.edu, +5 625 961 914, reading, poetry\n",
+            "Dese el Ronouteo, desee@msn.com, +27 143 8038 9093, swimming, singing\n",
+            "Dese el Ronouteo, desee@msn.com, +27 143 8038 9093, swiming, singing\n",
+            "Gula Sojabobo, gulas@gmail.com, +38 150 806 083, airplanes, javelin, painting\n",
+            "Gula Sojabobo, gulas@gmail_dot_com, +38 150 806 083, airplanes, javelin, painting\n",
+            "Hidehi Hisitaino, hhisi001@plattsburgh.edu, +17 839 0306 027, sewing, airplanes, painting, bicycling\n",
+            "Hidehi Hisitaino, hhisi001@plattsburgh.edu, ++17 839 0306 027, sewing, airplanes, painting, bicycling\n",
+            "Huli Vinietewa, hvini004@plattsburgh.edu, +5 625 961 914, poetry, reading\n",
+            "Huli Vinietewa, hvini004@plattsburgh.edu, +5 625 961 914, poetry, reading\n",
             "Jimupe de Sufuyo, jdesu003@plattsburgh.edu, +28 390 6568 081, dancing, fishing\n",
             "Jimupe de Sufuyo, jdesu0O3@platsburgh.edu, ++28 390 6568 081, dancing, fishing\n",
             "Juyeta de Mubimaji, jdemu003@plattsburgh.edu, +28 341 8587 101, swimming\n",
             "Juyeta_de_Mubimaji,_jdemu0O3@platsburg.edu,_++28_341_8587_101, swimming\n",
             "Lukika el Noleusu, lelno005@plattsburgh.edu, +17 782 754 3134\n",
             "Lukika_el_Noleusu,_lelno005@plattsberg.edu,_++17_782_754_3134\n",
-            "Megu de Cihiwei, megud@gmail.com, +29 684 8706 2470, poetry, piano, tennis\n",
-            "Megu_de_Cihiwei,_megud@gmail_dot_com,_+29_684_8706_2470, poetry, piano, tennnis\n",
+            "Megu de Cihiwei, megud@gmail.com, +29 684 8706 2470, piano, poetry, tennis\n",
+            "Megu_de_Cihiwei,_megud@gmail_dot_com,_+29_684_8706_2470, piano, poetry, tennnis\n",
             "Meli Lowira, mlowi005@plattsburgh.edu, +25 341 908 2185, sewing, cards, reading, bicycling\n",
             "Meli_Lowira,_mlowi0O5@plattsburg.edu,_+25_341_908_2185,_sewing, cards, reading, bicycling\n",
             "Nute de Magohabi, nuted@yahoo.com, +35 427 2780 8196\n",
             "Nute de Magohabi, nuted@yahoo_dot_com, ++35 427 2780 8196\n",
             "Pabeve de Domejelau, pabeved@yahoo.com, +30 802 8459 686, javelin\n",
             "Pabeve de Domejelau, pabeved@yahoo_dot_com, +30 802 8459 686, javelin\n",
-            "Pesi Ruhiuru, pruhi003@plattsburgh.edu, +19 978 9073 6258, farming, running\n",
-            "Pesi Ruhiuru, pruhi003@plattsburg.edu, +19 978 9073 6258, farming, runnning\n",
+            "Pesi Ruhiuru, pruhi003@plattsburgh.edu, +19 978 9073 6258, running, farming\n",
+            "Pesi Ruhiuru, pruhi003@plattsburg.edu, +19 978 9073 6258, runnning, farming\n",
             "Puye Liyodebe, pliyo005@plattsburgh.edu, +42 735 7365 3018, swimming, sewing\n",
             "Puye Liyodebe, pliyo005@plattsburg.edu, ++42 735 7365 3018, swimming, sewing\n",
             "Seyi de Rageidame, seyid@yahoo.com, +9 809 729 635\n",
             "Seyi de Rageidame, seyid@yahoo_dot_com, +9 809 729 635\n",
             "Tivo Pobunobe, tpobu005@plattsburgh.edu, +38 218 0107 434\n",
             "Tivo_Pobunobe,_tpobu0O5@plattsburgh.edu,_++38_218_0107_434\n",
-            "Vavo Taciyuhe, vtaci001@plattsburgh.edu, +13 836 9574 682, singing, piano, painting, bicycling\n",
-            "Vavo Taciyuhe, vtaci0O1@platsburg.edu, ++13 836 9574 682, singing, piano, painting, bicycling\n",
-            "Vifo de Siwoyoewa, vifod@msn.com, +33 379 4279 580, hiking, poetry, bicycling\n",
-            "Vifo_de_Siwoyoewa,_vifod@msn.com,_+33_379_4279_580, hiking, poetry, bicycling\n",
+            "Vavo Taciyuhe, vtaci001@plattsburgh.edu, +13 836 9574 682, piano, bicycling, painting, singing\n",
+            "Vavo Taciyuhe, vtaci0O1@platsburg.edu, ++13 836 9574 682, piano, bicycling, painting, singing\n",
+            "Vifo de Siwoyoewa, vifod@msn.com, +33 379 4279 580, poetry, hiking, bicycling\n",
+            "Vifo_de_Siwoyoewa,_vifod@msn.com,_+33_379_4279_580, poetry, hiking, bicycling\n",
             "Walaci Bafakuha, wbafa006@plattsburgh.edu, +16 216 8484 5135\n",
             "Walaci Bafakuha, wbafa0O6@plattsberg.edu, ++16 216 8484 5135\n",
             "Yina Yukeodi, yyuke006@plattsburgh.edu, +5 457 2185 825, sewing, fishing\n",
@@ -308,12 +308,12 @@
         "    print(f'received_file3 written with {received_file3_line_count} lines')\n",
         "\n",
         "    for file in all_files:\n",
-        "        file.close()\n"
+        "        file.close()"
       ],
       "metadata": {
         "id": "ZHVptnh69iMI"
       },
-      "execution_count": 10,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -341,78 +341,72 @@
         "\n",
         "# Put in YOUR name\n",
         "# Generate 20-50 records to debug and 100000 for your final code check\n",
-        "make_files(my_name='Lily Roy', record_count=20)\n"
+        "def make_files(my_name='Lily Roy', record_count=20):\n",
+        "\n",
+        "\n",
+        " def read_and_clean_data(input_file_path):\n",
+        "    cleaned_data = set()\n",
+        "    with open(input_file_path, 'r') as file:\n",
+        "        header_row = file.readline().strip()\n",
+        "        for line in file:\n",
+        "            entry = line.strip()\n",
+        "            cleaned_entry = entry\n",
+        "\n",
+        "def eliminate_transition_errors(corrected_line):\n",
+        "  corrected_line = corrected_line.replace('nnn', 'nn')\n",
+        "\n",
+        "  corrected_line = corrected_line.replace('++', '+')\n",
+        "\n",
+        "  corrected_line = corrected_line.replace('0O', '00')\n",
+        "\n",
+        "  corrected_line = corrected_line.replace ('dot_com', '.com')\n",
+        "\n",
+        "  corrected_line = corrected_line.replace('platsburgh', 'plattsburgh')\n",
+        "\n",
+        "  corrected_line = corrected_line.replace('swiming', 'swimming')\n",
+        "\n",
+        "  corrected_line = corrected_line.replace('plattsbug', 'plattsburgh')\n",
+        "\n",
+        "  corrected_line = corrected_line.replace('platsburg', 'plattsburgh')\n",
+        "\n",
+        "  corrected_line = corrected_line.replace('plattsberg', 'plattsburgh')\n",
+        "\n",
+        "  corrected_line = corrected_line.replace('_', ' ')\n",
+        "\n",
+        "  return corrected_line\n",
+        "\n",
+        "\n",
+        "def cleaning_received_data(received_data):\n",
+        "    corrected_data = []\n",
+        "    for line in received_data:\n",
+        "        corrected_line = eliminate_transition_errors(line)\n",
+        "        corrected_data.append(corrected_line)\n",
+        "    return corrected_data\n",
+        "\n",
+        "\n",
+        "def compare_files(file_path1, file_path2):\n",
+        "\n",
+        "    header1, data1 = cleaning_received_data(file_path1)\n",
+        "    header2, data2 = cleaning_received_data(file_path2)\n",
+        "\n",
+        "\n",
+        "    return header1 == header2 and data1 == data2\n",
+        "\n",
+        "if __name__ == \"__main__\":\n",
+        "    file_path = 'as_received1.txt'\n",
+        "    received_data = []"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "lW5OIax_Aqx1",
-        "outputId": "26b0e589-795c-451a-8e36-7f3efa0ed3ed"
+        "id": "lW5OIax_Aqx1"
       },
-      "execution_count": 11,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "source_file written with 20 lines\n",
-            "received_file1 written with 11 lines\n",
-            "received_file2 written with 7 lines\n",
-            "received_file3 written with 5 lines\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "with open('as_recieved1.txt', 'r'):\n",
-        "  line = file.readline()\n",
-        "while len(line) > 0:\n",
-        "   line = line.strip()\n",
-        "\n",
-        "reversed_data = line\n",
-        "\n",
-        "corrected_data.append(reversed_data)\n",
-        "\n",
-        "corrected_data.sort()\n",
-        "\n",
-        "corrected_data = list(set(corrected_data()))\n",
-        "\n",
-        "with open('corrected.txt', 'w') as corrected_file:\n",
-        "  for item in corrected_data:\n",
-        "    corrected_file.write(item + '\\n')\n",
-        "\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 286
-        },
-        "id": "v_pZKmchzErU",
-        "outputId": "79b248bf-8190-4fb5-c73e-696db96910c3"
-      },
-      "execution_count": 21,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "FileNotFoundError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-21-6e0f3d9bb110>\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'as_recieved1.txt'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'r'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m   \u001b[0mline\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfile\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreadline\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mwhile\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mline\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m    \u001b[0mline\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mline\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstrip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'as_recieved1.txt'"
-          ]
-        }
-      ]
+      "execution_count": 13,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "6OQt5oAB0CDK"
+        "id": "mPB0Imi1VJ1T"
       },
       "execution_count": null,
       "outputs": []
