--- a/Assignment5.ipynb
+++ b/Assignment5.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN/R7NIa0zqZmw1uyw9ybOx",
+      "authorship_tag": "ABX9TyOsOYOU6xBB8naVrRb59O+X",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1126,31 +1126,79 @@
     {
       "cell_type": "code",
       "source": [
-        "factorial(n) =(list(range(1,n)))\n",
-        "product = 1\n",
+        "from functools import reduce\n",
         "\n",
-        "for x in my_list:\n",
-        "  product *=x\n",
+        "def factorial(n):\n",
+        "    if n < 0:\n",
+        "        raise ValueError(\"Factorial is not defined for negative numbers\")\n",
+        "    if n == 0:\n",
+        "        return 1\n",
+        "    numbers = [i for i in range(1, n + 1)]\n",
+        "    return reduce(lambda x, y: x * y, numbers)\n",
         "\n",
-        "\n",
-        "\n"
+        "print(factorial(5))\n",
+        "print(factorial(10))\n",
+        "print(factorial(20))\n",
+        "print(factorial(50))"
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 161
+          "base_uri": "https://localhost:8080/"
         },
         "id": "mqS5TPtG-OJx",
-        "outputId": "349d2984-5e37-4d7b-847a-61df491cb63c"
+        "outputId": "6654e231-cf09-4ac7-b252-c8b6572fecce"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "SyntaxError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-68-0aa02dbef736>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    factorial(n) =(list(range(1,n)))\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m cannot assign to function call here. Maybe you meant '==' instead of '='?\n"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "120\n",
+            "3628800\n",
+            "2432902008176640000\n",
+            "30414093201713378043612608166064768844377641568960512000000000000\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def special_factorial(n):\n",
+        "    if n < 0:\n",
+        "        return \"Factorial not defined for negative numbers\"\n",
+        "    elif n == 0:\n",
+        "        return 1\n",
+        "\n",
+        "    numbers = [i for i in range(1, n + 1) if i not in [4, 13, 22]]\n",
+        "    product = 1\n",
+        "    for x in numbers:\n",
+        "        product *= x\n",
+        "\n",
+        "    return product\n",
+        "print(special_factorial(5))\n",
+        "print(special_factorial(10))\n",
+        "print(special_factorial(20))\n",
+        "print(special_factorial(50))"
+      ],
+      "metadata": {
+        "id": "dzbJWUQ2-4JT",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "8a9d2eab-2617-40be-bcb0-404a0cf3a00e"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "30\n",
+            "907200\n",
+            "46786577080320000\n",
+            "26585745805693512275885146998308364374455980392448000000000000\n"
           ]
         }
       ]
@@ -1159,7 +1207,7 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "dzbJWUQ2-4JT"
+        "id": "YGuwpv-Gvqp7"
       },
       "execution_count": null,
       "outputs": []
