--- a/Assignment4.ipynb
+++ b/Assignment4.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN6hwPnuZFFJr3Y3ltWtyT9",
+      "authorship_tag": "ABX9TyNN1HNEyQX81Xcst3NFxybh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -63,7 +63,7 @@
         "id": "N-kYNZGxuQKY",
         "outputId": "996e6040-5230-4aa6-b9ed-50e3b8e89575"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -87,7 +87,7 @@
         "id": "h9gmv5CeubPT",
         "outputId": "e5349013-5719-472d-d472-6702ba8263bf"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -112,7 +112,7 @@
         "id": "yadvV2ukuscv",
         "outputId": "b04d7651-706a-462c-96a9-6e554725671e"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -138,7 +138,7 @@
         "id": "rAKIwTrOu4ja",
         "outputId": "7d441e0b-1aad-470e-917a-7af15699423d"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -165,7 +165,7 @@
         "id": "l2ZyYQH5vMYW",
         "outputId": "100821c8-a454-4709-f010-4e813092db2a"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -195,7 +195,7 @@
         "id": "TUIPdXrgvfwZ",
         "outputId": "2a65ba7e-ddb7-4f8f-926c-3a4160cbd369"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -222,7 +222,7 @@
         "id": "0g6QT_qkvvZq",
         "outputId": "223d987d-6dc2-41ed-927f-9edd542c15a2"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -250,7 +250,7 @@
         "id": "0Ug8Qn63wO8T",
         "outputId": "1c901153-3238-4ce5-a702-b8e6b7ca87b7"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -279,7 +279,7 @@
         "id": "vVdBsvYNwjjc",
         "outputId": "3393400f-e732-47f8-937d-92e3c2e3ace0"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -307,7 +307,7 @@
         "id": "GwH7GITcw69x",
         "outputId": "f34bda75-9e6f-41e3-84af-41f3c6449efd"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -336,7 +336,7 @@
         "id": "pOPjptIoxHle",
         "outputId": "82bd2c63-6dbe-417f-cd92-f0a95bf82bbc"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -364,7 +364,7 @@
         "id": "7D5ejTu6x6fz",
         "outputId": "d8ef4a8a-a2f9-46af-ced4-439edd8121ba"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -389,7 +389,7 @@
         "id": "mYbTs98pyk2-",
         "outputId": "4037df68-ca3c-4edc-ed4d-f2e041f576f5"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -418,7 +418,7 @@
         "id": "U4xTgbkCysJx",
         "outputId": "88f770f7-6a52-4619-edd4-749754d87eab"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -452,7 +452,7 @@
         "id": "sXprsFwAzPa2",
         "outputId": "1be8a13e-1c02-4c49-89e4-f63a17a224ab"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -477,7 +477,7 @@
         "id": "xT_e7er3zX2p",
         "outputId": "007a5136-b010-481f-a5bb-da81d51dd5e4"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -496,7 +496,7 @@
       "metadata": {
         "id": "S7lOPiSJzjyk"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -512,7 +512,7 @@
         "id": "asvscUujzy3y",
         "outputId": "53d29cea-408c-45a2-e991-41a30013012a"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -536,7 +536,7 @@
         "id": "eua5h3fE0Ivt",
         "outputId": "a46a1a46-a9c8-4eb0-b09f-0d29c5db9b70"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -560,7 +560,7 @@
         "id": "rXGa7bEX0NFP",
         "outputId": "3431b261-592d-4692-953d-d4da92ffc0ac"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -584,7 +584,7 @@
         "id": "61S59HEX0OV9",
         "outputId": "a43024a9-c9e7-4d6a-a064-3b130481f64e"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -615,7 +615,7 @@
         "id": "hX8IXUVy0PlW",
         "outputId": "bb097136-8dcb-4ab4-c003-eef11f95040c"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -647,7 +647,7 @@
         "id": "Sg9ELz4n1Rle",
         "outputId": "40e8eca8-a247-42fa-92da-801758a6353e"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -680,7 +680,7 @@
         "id": "NUqLJytd31_U",
         "outputId": "d0b2f4a2-6d49-455d-a9ec-af44c297d1a9"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -727,7 +727,7 @@
         "id": "Pp47ruzt5RVU",
         "outputId": "37c38dda-f7d7-4dab-8876-dc030c9f1894"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -801,7 +801,7 @@
         "id": "WzvFDwzF5_SQ",
         "outputId": "64983982-59f3-4de7-c265-9bbf992a2e74"
       },
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -906,7 +906,7 @@
         "id": "eXJICyLp6UOa",
         "outputId": "33a73cc7-1684-4301-a491-4ad1c1b0f544"
       },
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -979,7 +979,7 @@
         "id": "_N019ufn8_NN",
         "outputId": "79973709-ad2b-4485-d62e-158f1f14f2e9"
       },
-      "execution_count": 92,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1036,7 +1036,7 @@
         "id": "umkD5zs8_4a1",
         "outputId": "b53cda19-51a7-4375-d580-d4834235d717"
       },
-      "execution_count": 93,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1092,7 +1092,7 @@
         "id": "9e4MYonDC4NX",
         "outputId": "10825f45-526c-4a55-ee1c-4f4a7807fa24"
       },
-      "execution_count": 104,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1117,26 +1117,27 @@
     {
       "cell_type": "code",
       "source": [
-        "for value in range (60, 85, 7):\n",
-        "  print(value)"
+        "for number in range(60, 86):\n",
+        "    if number % 7 == 0:\n",
+        "        print(number ** 3)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "t7_HNR6VDO49",
-        "outputId": "08e70ac7-3c5c-4e21-d133-791f7d7a156f"
+        "outputId": "2f657a2b-eb52-4000-d3f5-f0e5d0830626"
       },
-      "execution_count": 108,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "60\n",
-            "67\n",
-            "74\n",
-            "81\n"
+            "250047\n",
+            "343000\n",
+            "456533\n",
+            "592704\n"
           ]
         }
       ]
@@ -1144,129 +1145,29 @@
     {
       "cell_type": "code",
       "source": [
-        "(60**3)"
+        "x_values = [40, 50, 120, -8, 6]\n",
+        "for x in x_values:\n",
+        "    y = 7.4 * x + 51\n",
+        "    print(f\"y = 7.4*{x} + 51: {y}\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "65wEsjd0E_UN",
-        "outputId": "663b17b1-906e-4c50-c4bc-5f2130cfce23"
-      },
-      "execution_count": 113,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "216000"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 113
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "(67**3)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "BdHonJIBHGRs",
-        "outputId": "adafa850-bc02-4e5c-cb11-175f0b6ca14e"
-      },
-      "execution_count": 114,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "300763"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 114
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "(74**3)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "l-NX5d5BHH6X",
-        "outputId": "0171a163-f626-4467-d1ef-6ac5364fcafc"
-      },
-      "execution_count": 115,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "405224"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 115
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "(81**3)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "CC7Jap6-HJtf",
-        "outputId": "535865fe-9839-4db8-b606-d971157c4279"
-      },
-      "execution_count": 116,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "531441"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 116
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "compute(y = 7.4x + 51)\n",
-        "for(40, 50, 120, -8, 6)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 143
         },
         "id": "57G6Zh4hGsmh",
-        "outputId": "43706fbf-21da-4c60-beca-fff09391db72"
+        "outputId": "61539c63-dec7-43e5-97a3-6aa5f460ff6e"
       },
-      "execution_count": 117,
+      "execution_count": 2,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "SyntaxError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-117-3765834131bd>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    compute(y = 7.4x + 51)\u001b[0m\n\u001b[0m                  ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid decimal literal\n"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "y = 7.4*40 + 51: 347.0\n",
+            "y = 7.4*50 + 51: 421.0\n",
+            "y = 7.4*120 + 51: 939.0\n",
+            "y = 7.4*-8 + 51: -8.200000000000003\n",
+            "y = 7.4*6 + 51: 95.4\n"
           ]
         }
       ]
